--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>
             	{% if page.class == 'post' %}
                         {% if page.title != 'Blog' %}
-                            <br><a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :" class="social">Partager sur Twitter</a></div>
+                            <br><a href="http://twitter.com/share?text=&ldquo;{{ page.title }}&rdquo; by @cedced19 :">Partager sur Twitter</a></div>
         	             {% endif %}
                      {% endif %}
         </p>
