--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<hr class="rule">
-<footer class="footer-wrap" role="complementary">
+<hr class="rule animate">
+<footer class="footer-wrap animate" role="complementary">
 	<p class="footer">
 	   Cedced19 - <a href="http://cedced19.github.io/license/">MIT</a>
             	{% if page.class == 'post' %}
