--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="header{% if page.contrast == 'light' %} light{% endif %}" role="banner">
-	<div class="masthead">
+	<div class="masthead animate">
 		<h1>{{ page.title }}</h1>
 		<br>
 		<h2>{{ page.subtitle }}</h2>
