--- a/_includes/headerpost.html
+++ b/_includes/headerpost.html
@@ -1,5 +1,5 @@
 <header class="header low" role="banner">
-            <div class="masthead low">
+            <div class="masthead low animate">
                 <h1>{{ site.title }}</h1>
                 <br>
                 <h2>{{ page.title }}</h2>
