--- a/soft/home/styles/src/main.styl
+++ b/soft/home/styles/src/main.styl
@@ -91,7 +91,7 @@ h3
 
 .social
   font-size: 3em
-  padding-left: 15%
+  text-align: center
 
 @media screen and (max-width: 600px)
  h1,h2,h3,h4,h5,h6
