--- a/_includes/content.html
+++ b/_includes/content.html
@@ -7,22 +7,22 @@
         <ol id="repos">
          <li>
            <a href="http://cedced19.github.io/soft/home/" class="name-repo">Home</a>
-           <p>Une page d'acceuil sans pub.</p>
+           <p class="desc-repo">Une page d'acceuil sans pub.</p>
            <span class="language">CSS</span>
          </li>
          <li>
            <a href="http://cedced19.github.io/demo/countdown-page/" class="name-repo">Countdown</a>
-           <p>Un compte à rebours</p>
+           <p class="desc-repo">Un compte à rebours</p>
            <span class="language">JavaScript</span>
           </li>
           <li>
            <a href="http://cedced19.github.io/demo/greeting-birth/" class="name-repo">Greeting birth</a>
-           <p>Une page pour les naissance</p>
+           <p class="desc-repo">Une page pour les naissance</p>
            <span class="language">JavaScript</span>
           </li>
           <li>
            <a href="http://cedced19.github.io/demo/mothers-day/" class="name-repo">Mother's day</a>
-           <p>Une page pour la fête des mères</p>
+           <p class="desc-repo">Une page pour la fête des mères</p>
            <span class="language">JavaScript</span>
           </li>
          </ol>
