Set language to english

--- a/_includes/content.html
+++ b/_includes/content.html
@@ -3,26 +3,26 @@
 	{{ content }}
 
         {% if page.title == site.title %}
-        <h2 id="depots">Dépôts</h2>
+        <h3 id="depots">Dépôts</h2>
         <ol id="repos">
          <li class="repo">
            <a href="http://cedced19.github.io/soft/home/" class="name-repo">Home</a>
-           <p class="desc-repo">Une page d'acceuil sans pub.</p>
+           <p class="desc-repo">A homepage without pub</p>
            <span class="language">CSS</span>
          </li>
          <li class="repo">
            <a href="http://cedced19.github.io/demo/countdown-page/" class="name-repo">Countdown</a>
-           <p class="desc-repo">Un compte à rebours</p>
+           <p class="desc-repo">A countdown</p>
            <span class="language">JavaScript</span>
           </li>
           <li class="repo">
            <a href="http://cedced19.github.io/demo/greeting-birth/" class="name-repo">Greeting birth</a>
-           <p class="desc-repo">Une page pour les naissance</p>
+           <p class="desc-repo">A page for birth</p>
            <span class="language">JavaScript</span>
           </li>
           <li class="repo">
            <a href="http://cedced19.github.io/demo/mothers-day/" class="name-repo">Mother's day</a>
-           <p class="desc-repo">Une page pour la fête des mères</p>
+           <p class="desc-repo">A page for Mother's Day</p>
            <span class="language">JavaScript</span>
           </li>
          </ol>
