--- a/_includes/content.html
+++ b/_includes/content.html
@@ -3,7 +3,7 @@
 	{{ content }}
 
         {% if page.title == site.title %}
-        <h3 id="depots">Dépôts</h2>
+        <h3 id="depots">Repositories</h2>
         <ol id="repos">
          <li class="repo">
            <a href="http://cedced19.github.io/soft/home/" class="name-repo">Home</a>
