--- a/dev/styles/calculs.css
+++ b/dev/styles/calculs.css
@@ -1,5 +1,5 @@
 html, body {
-    font-family:"calluna",Georgia,Times,"Times New Roman",sans-serif;
+    font-family:Sans-Serif;
     background-color: #27ae60;
     color: #ecf0f1;
 }
