--- a/dev/styles/main.css
+++ b/dev/styles/main.css
@@ -124,6 +124,18 @@ input[type="search"] {
 input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration {
     -webkit-appearance:none
 }
+input[type="text"], input[type="email"], textarea, select {
+    color: #888;
+    width: 70%;
+    padding: 0px 0px 0px 5px;
+    border: 1px solid;
+    background: #FFF;
+    outline: 0;
+    font: 200 12px/25px Arial, Helvetica, sans-serif;
+    height: 30px;
+    line-height:15px;
+    margin: 2px 6px 16px 0px;
+}
 button::-moz-focus-inner,input::-moz-focus-inner {
     border:0;
     padding:0
