--- a/dev/styles/main.css
+++ b/dev/styles/main.css
@@ -575,7 +575,7 @@ li {
     padding-bottom:45px !important;
 }
 .name-repo {
-    font-size:25px;
+    font-size:1.1em;
     border-bottom:0 dotted #fff!important;
     font-weight:700
 }
