--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -170,6 +170,30 @@ pre {
   .site-title, .site-title:visited {
     color: #424242; }
 
+.home-center {
+  text-align: center;
+  margin: auto;
+    width: 75%;
+}
+
+.home-center a {
+  margin: 10px;
+  border-radius: 25px;
+  border: 2px solid #27ae60;
+  padding: 10px;
+  text-decoration: none;
+  color: #828282;
+}
+
+.home-center a:visited {
+  text-decoration: none;
+  color: #828282;
+}
+
+.home-content {
+  margin-top: 10px;
+}
+
 .site-nav {
   float: right;
   line-height: 54px; }
@@ -259,6 +283,12 @@ pre {
   width: -webkit-calc(45% - (30px / 2));
   width: calc(45% - (30px / 2)); }
 
+@media screen and (max-width: 350px) {
+    .home-center {
+      margin: 0;
+      text-align: none; }
+    .home-center a {
+        display: block; } }
 @media screen and (max-width: 800px) {
   .footer-col-1,
   .footer-col-2 {
