--- a/assets/main.css
+++ b/assets/main.css
@@ -11,7 +11,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
-  font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #111;
   background-color: #fdfdfd;
   -webkit-text-size-adjust: 100%;
@@ -19,10 +19,7 @@ body {
   -moz-font-feature-settings: "kern" 1;
   -o-font-feature-settings: "kern" 1;
   font-feature-settings: "kern" 1;
-  font-kerning: normal;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column; }
+  font-kerning: normal; }
 
 /**
  * Set `margin-bottom` to maintain vertical rhythm
@@ -32,13 +29,6 @@ p, blockquote, pre,
 ul, ol, dl, figure,
 .highlight {
   margin-bottom: 15px; }
-
-/**
- * `main` element
- */
-main {
-  display: block;
-  /* Default value of `display` of `main` element is 'inline' in IE 11. */ }
 
 /**
  * Images
@@ -125,13 +115,25 @@ pre {
 /**
  * Wrapper
  */
+ @keyframes fadeIn {
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
+}
+
 .wrapper {
-  max-width: -webkit-calc(800px - (30px * 2));
+  max-width: -webkit-calc(740px);
   max-width: calc(800px - (30px * 2));
   margin-right: auto;
   margin-left: auto;
   padding-right: 30px;
-  padding-left: 30px; }
+  padding-left: 30px;
+  animation-name: fadeIn;
+  animation-duration: 0.75s;
+  animation-fill-mode: both; }
   @media screen and (max-width: 800px) {
     .wrapper {
       max-width: -webkit-calc(800px - (30px));
@@ -150,43 +152,22 @@ pre {
 /**
  * Icons
  */
-.svg-icon {
-  width: 16px;
-  height: 16px;
+.icon > svg {
   display: inline-block;
-  fill: #828282;
-  padding-right: 5px;
-  vertical-align: text-top; }
+  vertical-align: middle; }
+  .icon > svg path {
+    fill: #828282; }
 
+.social-media-list .icon {
+  padding-right: 5px; }
 .social-media-list li + li {
   padding-top: 5px; }
-
-/**
- * Tables
- */
-table {
-  margin-bottom: 30px;
-  width: 100%;
-  text-align: left;
-  color: #3f3f3f;
-  border-collapse: collapse;
-  border: 1px solid #e8e8e8; }
-  table tr:nth-child(even) {
-    background-color: #f7f7f7; }
-  table th, table td {
-    padding: 10px 15px; }
-  table th {
-    background-color: #f0f0f0;
-    border: 1px solid #dedede;
-    border-bottom-color: #c9c9c9; }
-  table td {
-    border: 1px solid #e8e8e8; }
 
 /**
  * Site header
  */
 .site-header {
-  border-top: 5px solid #424242;
+  border-top: 5px solid #27ae60;
   border-bottom: 1px solid #e8e8e8;
   min-height: 55.95px;
   position: relative; }
@@ -200,6 +181,30 @@ table {
   float: left; }
   .site-title, .site-title:visited {
     color: #424242; }
+
+.home-center {
+  text-align: center;
+  margin: auto;
+    width: 75%;
+}
+
+.home-center a {
+  margin: 10px;
+  border-radius: 25px;
+  border: 2px solid #27ae60;
+  padding: 10px;
+  text-decoration: none;
+  color: #828282;
+}
+
+.home-center a:visited {
+  text-decoration: none;
+  color: #828282;
+}
+
+.home-content {
+  margin-top: 10px;
+}
 
 .site-nav {
   float: right;
@@ -237,7 +242,7 @@ table {
         line-height: 0;
         padding-top: 10px;
         text-align: center; }
-        .site-nav .menu-icon > svg {
+        .site-nav .menu-icon > svg path {
           fill: #424242; }
       .site-nav input ~ .trigger {
         clear: both;
@@ -290,6 +295,12 @@ table {
   width: -webkit-calc(45% - (30px / 2));
   width: calc(45% - (30px / 2)); }
 
+@media screen and (max-width: 350px) {
+    .home-center {
+      margin: 0;
+      text-align: none; }
+    .home-center a {
+        display: block; } }
 @media screen and (max-width: 800px) {
   .footer-col-1,
   .footer-col-2 {
@@ -308,14 +319,10 @@ table {
  * Page content
  */
 .page-content {
-  padding: 30px 0;
-  flex: 1; }
+  padding: 30px 0; }
 
 .page-heading {
-  font-size: 32px; }
-
-.post-list-heading {
-  font-size: 28px; }
+  font-size: 37px; }
 
 .post-list {
   margin-left: 0;
@@ -330,6 +337,14 @@ table {
 .post-link {
   display: block;
   font-size: 24px; }
+
+/**
+  * Picture
+  */
+.profile {
+    max-width: 30%;
+    border-radius: 50%;
+}
 
 /**
  * Posts
